--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <title>FileChanger</title>
+    <style>
+       body {
+        background: url({%static "img/background_v3.jpg"%});
+        -moz-background-size: 100%; /* Firefox 3.6+ */
+        -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+        -o-background-size: 100%; /* Opera 9.6+ */
+        background-size: 100%; /* Современные браузеры */
+       }
+    </style>
 </head>
 <body>
-<a href="/login/">Вход</a> <a href="">История</a>
+    <div class="conteiner-md">
+        <div class="header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a href="/" class="navbar-brand"><img src="{%static "img/logo_mini2.png"%}" alt="logo" class="d-inline-block align-top"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/login/">Вход <span class="sr-only">(current)</span></a>
+                    </li>
+
+                  </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="main">
+            <h1 class="main d-flex justify-content-center" style="margin-top: 10%;">Post Pigeon</h1>
+            <small id="id_username" class="form-text text-muted">ᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠ</small>
+            <h6 class="main d-flex justify-content-center">Проект созданный для обмена файлами без их хранения на выделенном сервере</h6>
+            <small id="id_username" class="form-text text-muted">ᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠ</small>
+            <h6 class="main d-flex justify-content-center">Реализован студентами группы 3651003/60801</h6>
+            <h6 class="main d-flex justify-content-center">Климшин Илья</h6>
+            <h6 class="main d-flex justify-content-center">Башканков Максим</h6>
+            <h6 class="main d-flex justify-content-center">Титов Егор</h6>
+            <h6 class="main d-flex justify-content-center">Миронова Ксения</h6>
+            <h6 class="main d-flex justify-content-center">Рослякова Анна</h6>
+
+        </div>
+        <div class="footer"></div>
+    </div>
+
 </body>
 </html>
