--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,84 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <title>Login</title>
+    <style>
+       body {
+        background: url({%static "img/background_v3.jpg"%});
+        -moz-background-size: 100%; /* Firefox 3.6+ */
+        -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+        -o-background-size: 100%; /* Opera 9.6+ */
+        background-size: 100%; /* Современные браузеры */
+       }
+    </style>
 </head>
 <body>
-<form action="" method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Войти</button>
-    <button type="button" onclick="location.href='/register/'">Зарегистрироваться</button>
-    </form>
+    <div class="conteiner-md" >
+        <div class="header">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <a href="/"  class="navbar-brand"><img src="{%static "img/logo_mini2.png"%}" alt="logo" class="d-inline-block align-top"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link " href="#">Вход <span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <div class="main d-flex justify-content-center" style="margin-top: 10%;">
+                <form action="" method="post" class="needs-validation" novalidate>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <small id="id_username" class="form-text text-muted">ᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠ</small>
+                        <label for="id_username">Имя пользователя</label>
+                        <input id="id_username" type="text" name="username" class="form-control" required>
+                        <div class="invalid-feedback">
+                          Пожалуйста, введите имя пользователя.
+                        </div>
+
+                      </div>
+                      <div class="form-group">
+                        <label for="id_password">Пароль</label>
+                        <input id="id_password" type="password" name="password" class="form-control" required>
+                        <div class="invalid-feedback">
+                          Пожалуйста, введите пароль.
+                        </div>
+                      </div>
+                    <button type="submit" class="btn btn-secondary" >Войти</button>
+                    <button type="button" onclick="location.href='/register/'" class="btn btn-secondary float-right">Зарегистрироваться</button>
+                </form>
+                <script>
+                // Example starter JavaScript for disabling form submissions if there are invalid fields
+                (function() {
+                  'use strict';
+                  window.addEventListener('load', function() {
+                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function(form) {
+                      form.addEventListener('submit', function(event) {
+                        if (form.checkValidity() === false) {
+                          event.preventDefault();
+                          event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                      }, false);
+                    });
+                  }, false);
+                })();
+                </script>
+
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
 </html>
