--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <title>Register</title>
+    <style>
+       body {
+        background: url({%static "img/background_v3.jpg"%});
+        -moz-background-size: 100%; /* Firefox 3.6+ */
+        -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+        -o-background-size: 100%; /* Opera 9.6+ */
+        background-size: 100%; /* Современные браузеры */
+       }
+    </style>
 </head>
 <body>
-<form action="" method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Зарегистрироваться</button>
-    </form>
+<div class="conteiner-md">
+    <div class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="{%static "img/logo.png"%}" target="_blank" class="navbar-brand"><img src="{%static "img/logo_mini2.png"%}" alt="logo" class="d-inline-block align-top"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/login/" style="text-align: right">Вход <span class="sr-only">(current)</span></a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="main d-flex justify-content-center" style="margin-top: 10%; padding-bottom: 10%">
+{#        <form action="" method="post">#}
+{#          {% csrf_token %}#}
+{#          {{ form.as_p }}#}
+{#          <button type="submit" class="btn btn-outline-secondary">Зарегистрироваться</button>#}
+{#        </form>#}
+         <form action="" method="post" class="needs-validation" role="form" data-toggle="validator"
+            oninput='password2.setCustomValidity(password.value != password2.value ? "Passwords do not match." : "")'>
+             {% csrf_token %}
+{#             {{ form.as_p }}#}
+             <div class="form-group">
+                <label for="id_username">Имя пользователя</label>
+                <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username" class="form-control">
+                <small id="emailHelp" class="form-text text-muted">Не больше 150 символов, содержащих только цифры, буквы и символы @/./+/-/_ .</small>
+             </div>
+             <div class="form-group">
+                <label for="id_password">Пароль</label>
+                <input type="password" name="password1" autocomplete="new-password" required="" id="id_password1" class="form-control">
+                <small id="emailHelp" class="form-text text-muted">
+                        <ul>
+                            <li>Ваш пароль не должен быть похож на другую вашу личную информацию.</li>
+                            <li>Ваш пароль не должен быть короче 8 символов.</li>
+                            <li>Ваш пароль не может быть часто используемым паролем.</li>
+                            <li>Ваш пароль не может быть полностью из цифр.</li>
+                        </ul>
+                    </small>
+             </div>
+             <div class="form-group">
+                <label for="id_password2">Подтверждение пароля</label>
+                <input type="password" name="password2" autocomplete="new-password" required="" id="id_password2" class="form-control">
+             </div>
+          <button type="submit" class="btn btn-secondary">Зарегистрироваться</button>
+        </form>
+
+    </div>
+    <div class="footer"></div>
+</div>
+
 </body>
 </html>
